examples/errors/7_parse_bool/definitions.tmd
group Root {}

element Window -> Root {
    width: u32,
    height: u32,
    allow_resize: bool,
}